feat(email, seeder, users) validaçao invite e-mail, adiciona a validaçao de usuario desativado
